--- a/INTERIOR DESIGNER/index.html
+++ b/INTERIOR DESIGNER/index.html
@@ -153,7 +153,7 @@ nav .search_box span:hover::after{
    <p>At Home-Designing, we document inspiration. Our aim is to bring to our readers a steady set of resources that would help them visualize, create and maintain beautiful homes. Our emphasis is on visuals that motivate you. We cover architectural innovations, cool homes, ideas for specific rooms, new design trends, products and occasionally decor tips. We hope to become your one stop source for home design inspiration!</p> 
    <div class="space"></div>
   <div class="space"></div>
-   <p>‘Organization Name’ Interior Design is separate from other interior design firms in that we offer Interior Detailing as a discretionary piece of your full-benefit design bundle, bringing about a consistent design/construct process. The Interior Detailing officeworks connected at the hip with your own design group to make excellent foundations that upgrade the general tasteful of each condition in your home, including:</p>
+   <p>RN SHARMA ,builder and decor is separate from other interior design firms in that we offer Interior Detailing as a discretionary piece of your full-benefit design bundle, bringing about a consistent design/construct process. The Interior Detailing officeworks connected at the hip with your own design group to make excellent foundations that upgrade the general tasteful of each condition in your home, including:</p>
 <div class="space"></div>
 <p><i class="fas fa-circle fa-xs"></i>Furniture designs</p>
 <p><i class="fas fa-circle fa-xs"></i>Reflected roof designs</p>
